<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dead Chuffed</string>
    <string name="action_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="title_chart">Home</string>
    <string name="title_new">New Chart</string>
    <string name="fragNum">Fragment Number</string>
    <string name="progBar">Progress Bar</string>
    <string name="NULL">Loading</string>
    <string name="setTitle">Set Title</string>
    <string name="secs">Secs</string>
    <string name="mins">Mins</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>
    <string name="title">Breakdown</string>
    <string name="loadImage">Loading Image</string>
    <string name="title1">I Can\'t Wait</string>
    <string name="confirm">OK</string>
    <string name="dateset">Set new date</string>
    <string name="timecomp">Time Completed</string>
    <string name="timerem">Time Remaining</string>
    <string name="newBackground">Choose Background Image</string>
    <string name="useWallpaper">Use Android Wallpaper</string>
    <string name="chooseGall">Choose From Gallery</string>
    <string name="percHolder">100%</string>
    <string name="daysDone">Days Done</string>
    <string name="hoursDone">Hours Done</string>
    <string name="daysLeft">Days Left</string>
    <string name="hoursLeft">Hours Left</string>
    <string name="defaultTitle">for something!</string>
    <string name="instructions">Press and hold here to change the background.</string>
    <string name="new_chart">+ New Chuff Chart</string>
    <string name="press_here">Press and hold here</string>
    <string name="change_dates">to change dates</string>
    <string name="change_title">to change title</string>
    <string name="delete_chart">Delete This Chart</string>
    <string name="progBlue">Progress Bar Blue</string>
    <string name="progBarRed">Progress Bar Red</string>
    <string name="newChartText">Name your new chart</string>
    <string name="create">Create Chart</string>
    <string name="chartName">chart name</string>
    <string name="details_frag_percent">86%</string>
    <string name="dialog_dates_start_date">Start Date</string>
    <string name="dialog_dates_end_date">End Date</string>
    <string name="dialog_dates_done_button">Done</string>
    <string name="dialog_dates_cancel_button">Cancel</string>
    <string name="details_activity_months_done">Months</string>
    <string name="details_activity_weeks_done">Weeks</string>
    <string name="details_activity_days_done">Days</string>
    <string name="details_activity_hours_done">Hours</string>
    <string name="details_activity_completed_text">Completed</string>
    <string name="details_activity_minutes_done">Minutes</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

</resources>