<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_home_parent_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:paddingBottom="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".MainActivity$TestFragment" >


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/progressLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/progressBarRed"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/progBarBlue"
            android:background="#cdff100e"
            android:contentDescription="@string/progBarRed" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progBarBlue"
            android:layout_alignParentStart="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false"
            android:layout_alignLeft="@+id/progBar"
            android:layout_alignRight="@+id/progBar"
            android:layout_toLeftOf="@+id/progBar"
            android:contentDescription="@string/progBlue"
            android:background="#c22137ff"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/progBar"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/progBar"
            android:scaleType="fitXY"
            android:src="@drawable/progress"
            android:layout_margin="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="0dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/percDoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@id/progBar"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:text="@string/percHolder"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="#ffffffff" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/progressLayout"
        android:background="#66FFFFFF"
        android:orientation="vertical"
        android:id="@+id/chart_title"
        android:layout_toEndOf="@id/progressLayout">

        <TextView
            android:id="@+id/titleTop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/title1"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/titleBot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/NULL"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/progressLayout"
        android:background="#66FFFFFF"
        android:gravity="bottom"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/timeDoneTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/daysDone"
            android:textColor="#000000"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/timeLeftTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/daysLeft"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>