<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/SetTitleDialogBox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center_horizontal"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="0dp"
    android:theme="@android:style/Theme.Dialog" >

    <EditText
        android:id="@+id/setNewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center_vertical|right"
        android:hint="@string/NULL"
        android:inputType="text"
        android:maxLength="25"
        android:text="@string/chartName" />

    <TextView
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_weight="1"
        android:text="@string/create"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textAlignment="center"
        android:clickable="true"
        android:gravity="center_horizontal" />

</LinearLayout>