<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Details"
    style="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center|center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@android:color/background_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_frag_percent"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:textColor="@color/chart_text_color_dark"
        android:textSize="30sp"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/endDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/daysLeft"
        android:textSize="20sp"
        android:textColor="@color/chart_text_color_dark" />

    <TextView
        android:id="@+id/TimeCompleted"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/timecomp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/chart_text_color_dark">
    </TextView>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:id="@+id/progressBar4"
        android:layout_weight="0" />

</LinearLayout>