<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SetBackgroundDialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="0dp"
    android:theme="@android:style/Theme.Holo.Dialog"
    tools:context=".MainActivity"
    android:textAlignment="center">

    <TextView
        android:id="@+id/wallpaperButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/useWallpaper"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_default_small_margin" />

    <TextView
        android:id="@+id/galleryButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/chooseGall"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/activity_default_small_margin" />

    <TextView
        android:id="@+id/delete_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/delete_chart"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/activity_default_small_margin" />

</LinearLayout>