<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Details"
    style="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center|center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".DetailsActivityNew">

    <TextView
        android:id="@+id/details_activity_target_date_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/dialog_dates_end_date"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/chart_text_color_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NULL"
        android:id="@+id/details_activity_target_date"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:textColor="@color/chart_text_color_dark"
        android:textSize="30sp"
        android:textIsSelectable="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_default_small_margin"
        android:layout_marginTop="@dimen/activity_default_small_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_frag_percent"
            android:id="@+id/details_activity_percentage"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:textColor="@color/chart_text_color_dark"
            android:textSize="25sp"
            android:textIsSelectable="false"
            android:gravity="right" />

        <TextView
            android:id="@+id/TimeCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_activity_completed_text"
            android:textSize="25sp"
            android:textColor="@color/chart_text_color_dark"
            android:gravity="left"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_default_small_margin">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/details_activity_months_done"
            android:id="@+id/textView3"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/NULL"
            android:id="@+id/details_activity_months_count"
            android:layout_weight="1"
            android:gravity="right" />
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_activity_progress_months"
        android:layout_weight="0" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/details_activity_weeks_done"
            android:id="@+id/textView4"
            android:layout_weight="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/NULL"
            android:id="@+id/details_activity_weeks_count"
            android:layout_weight="1"
            android:gravity="right" />
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_activity_progress_weeks"
        android:layout_weight="0" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/details_activity_days_done"
            android:id="@+id/textView5"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/NULL"
            android:id="@+id/details_activity_days_count"
            android:layout_weight="1"
            android:gravity="right" />
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_activity_progress_days"
        android:layout_weight="0" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/details_activity_hours_done"
            android:id="@+id/textView6"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/NULL"
            android:id="@+id/details_activity_hours_count"
            android:layout_weight="1"
            android:gravity="right" />
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_activity_progress_hours"
        android:layout_weight="0" />

</LinearLayout>